      it be unique. (Jonathan Lange)

    * ``selftest``'s ``--starting-with`` option can now use predefined
      prefixes so that one can say ``bzr selftest -s bp.loom`` instead of
      ``bzr selftest -s bzrlib.plugins.loom``. (Vincent Ladeuil)

    * ``selftest``'s ``--starting-with`` option now accepts multiple values.
      (Vincent Ladeuil)

  INTERNALS:

    * A new plugin interface, ``bzrlib.log.log_adapters``, has been added.
      This allows dynamic log output filtering by plugins.
      (Robert Collins)

    * ``bzrlib.btree_index`` is now available, providing a b-tree index
      layer. The design is memory conservative (limited memory cache),
      faster to seek (approx 100 nodes per page, gives 100-way fan out),
      and stores compressed pages allowing more keys per page.
      (Robert Collins, John Arbash Meinel)

    * ``bzrlib.diff.DiffTree.show_diff`` now skips changes where the kind
      is unknown in both source and target.
      (Robert Collins, Aaron Bentley)

    * Mail clients for `bzr send` are now listed in a registry.  This
      allows plugins to add new clients by registering them with
      ``bzrlib.mail_client.mail_client_registry``.  All of the built-in
      clients now use this mechanism.  (Neil Martinsen-Burrell)


bzr 1.6.1rc1 2008-08-29
-----------------------

This release fixes a few regressions found in the 1.6 client. Fetching
changes was using an O(N^2) buffering algorithm, so for large projects it
would cause memory thrashing. There is also a specific problem with the
``--1.6-rich-root`` format, which prevented stacking on top of
``--rich-root-pack`` repositories, and could allow users to accidentally
fetch experimental data (``-subtree``) without representing it properly.
The ``--1.6-rich-root`` format has been deprecated and users are
recommended to upgrade to ``--1.6.1-rich-root`` immediately.  Also we
re-introduced a workaround for users who have repositories with incorrect